# abc

./: Cargo.toml  README.md
actor/: Cargo.toml
actor/src/: lib.rs
docs/: 01-SPEC.md  02-SETUP.md  ARCHITECTURE_DIAGRAMS.md  PROJECT_CONTEXT.md  WSL2-SETUP.md
docs/agentry-plan-files/: CLAUDE.md
docs/agentry-plan-files/plans/: 00-DECISIONS.md  PROGRESS.md
docs/agentry-plan-files/plans/ws0-foundation/: M0.1-scaffold.md  M0.2-store-and-schema.md  M0.3-spawner-and-provisioning.md  M0.4-container-spawner.md
docs/agentry-plan-files/plans/ws1-slack/: M1.1-relay-socket-mode.md  M1.2-session-commands.md  M1.3-recipe-generation.md  M1.4-email-bridge.DEFERRED.md
docs/agentry-plan-files/plans/ws2-gating/: M2.1-plan-approval.md  M2.2-file-write-gate.md  M2.3-mcp-gateway-hubspot.md
docs/agentry-plan-files/plans/ws3-cross-agent/: M3.1-history-and-transcripts.md  M3.2-steering-mailbox.md  M3.3-manager-control-plane.md
scripts/: agentry-helpers.sh
src/: cmd.rs  main.rs  recipe.rs  session.rs
