[package]
name = "agentry-actor"
version = "0.1.0"
edition = "2021"
description = "Theater WASM actor that orchestrates local AI agent containers via podman."

[lib]
crate-type = ["cdylib"]

[dependencies]
packr-guest = { version = "0.6", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"
